--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=Casa;user=root;password=17052020"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
